Fixed dropdown color when collapsed

--- a/app/style.css
+++ b/app/style.css
@@ -42,7 +42,12 @@
 .navbar-custom .navbar-toggle .icon-bar {
     background-color: #ffffff;
 }
-
+.navbar-custom .dropdown-menu > li{
+    background-color: #ffffff;
+}
+.navbar-custom .dropdown-menu > li+li{
+    border-top: 1px solid #d3d3d3;
+}
 
 #footer {
     padding: 30px;
